[package]
name = "warband_autoblock"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
opt-level = 3
strip = true
lto = "fat"

[target.'aarch64-apple-darwin'.dependencies]
mach2 = "0.4.2"

[target.'x86_64-pc-windows-gnu'.dependencies]
winapi = { version = "0.3.9", features = ["psapi", "winnt"] }

[dependencies]
process-memory = "0.5.0"
sysinfo = "0.30.5"
crossterm = "0.27.0"


